--- a/playmus.css
+++ b/playmus.css
@@ -1,46 +1,41 @@
-*{ padding: 0; margin: 0; box-sizing: border-box; }
+*{ margin: 0; padding: 0; box-sizing: border-box; }
+#particles-js{ height:100vh;
+background-color: rgb(159, 199, 146); 
+position: absolute; z-index: -1;
+}
 body { min-height: 100vh;
   overflow: hidden;
   display: flex; 
   justify-content: center;
   min-height: 100vh;
-  font-family: "poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 0.8rem;
-  overflow: hidden;
 }
-.background {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-.container {  
-  display: block;
-  margin-top: 10rem; color: white;
-  opacity: 0.8;
+.containermus {  /* display: block; */
+  left: 38%; width: 100%;
   align-items: center;
   position: absolute;
-  width: 500px;
-  height: 160px;
-  border: 3px dashed gray;
-  border-radius: 1rem;
+  width: 340px;
+  height: 120px;
+  border: 3px solid gray;
+  border-radius: 7px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
 }
 h2 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-align: center;
-  font-weight: 500;
 }
 .player_progress {
   background-color: #c6bfbf;
   border-radius: 5px;
   height: 6px;
   width: 90%;
-  margin: 40px 20px 35px;
+  margin: 30px 15px 10px;
   position: relative;
   cursor: pointer;
 }
 .progress {
-  background-color: #daec1a;
+  background-color: #461bbb;
   border-radius: 5px;
   height: 100%;
   width: 0%;
@@ -59,7 +54,7 @@ h2 {
   align-items: center;
 }
 .fa-solid {
-  font-size: 30px;
+  font-size: 20px;
   color: #666;
   cursor: pointer;
   margin-right: 30px;
@@ -70,6 +65,14 @@ h2 {
   filter: brightness(40%);
 }
 .play-button {
-  font-size: 44px;
+  font-size: 30px;
+}
+
+*{
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
