--- a/playmus.css
+++ b/playmus.css
@@ -12,10 +12,10 @@ body { min-height: 100vh;
   font-size: 0.8rem;
 }
 .containermus {  /* display: block; */
-  left: 38%; width: 100%;
+  /* left: 38%; width: 100%; */
+  /* position: absolute; */
   align-items: center;
-  position: absolute;
-  width: 340px;
+  width: 465px;
   height: 120px;
   border: 3px solid gray;
   border-radius: 7px;
