--- a/preloadnew.css
+++ b/preloadnew.css
@@ -3,6 +3,8 @@
   z-index: 1002;
   font-size: 20px;
   text-align: center;
+  background-color: black;
+  color: white;
 }
 .preloader { opacity: .5;
     position: fixed;
